--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 	<div class="cont-menu active" id="menu">
 		<ul>
 			<img src="imagenes/Logo.png" width="350px" height="150px">
-			<a href="C:\Users\jojutla\OneDrive\Escritorio\Websites\FredoCorleone.github.io\index2.html"><li>HTML</li></a>
-			<a href="C:\Users\jojutla\OneDrive\Escritorio\Websites\FredoCorleone.github.io\index.html"><li>CSS</li></a>
-			<a href="C:\Users\jojutla\OneDrive\Escritorio\Websites\FredoCorleone.github.io\index3.html"><li>Javascript</li>
-			<a href="C:\Users\jojutla\OneDrive\Escritorio\Websites\FredoCorleone.github.io\index4.html"><li>Práctica final</li>
+			<a href="C:\Users\jojutla\OneDrive\Escritorio\Websites\FredoCorleone.github.io/index2.html"><li>HTML</li></a>
+			<a href="C:\Users\jojutla\OneDrive\Escritorio\Websites\FredoCorleone.github.io/index.html"><li>CSS</li></a>
+			<a href="C:\Users\jojutla\OneDrive\Escritorio\Websites\FredoCorleone.github.io/index3.html"><li>Javascript</li>
+			<a href="C:\Users\jojutla\OneDrive\Escritorio\Websites\FredoCorleone.github.io/index4.html"><li>Práctica final</li>
 		</ul>		
 	</div>
 <script src="animacion.js"></script>
