--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 	<div class="cont-menu active" id="menu">
 		<ul>
 			<img src="imagenes/Logo.png" width="350px" height="150px">
-			<a href="../index2.html"><li>HTML</li></a>
-			<a href="../index.html"><li>CSS</li></a>
-			<a href="../index3.html"><li>Javascript</li>
-			<a href="../index4.html"><li>Práctica final</li>
+			<a href="/index2.html"><li>HTML</li></a>
+			<a href="/index.html"><li>CSS</li></a>
+			<a href="index3.html"><li>Javascript</li>
+			<a href="index4.html"><li>Práctica final</li>
 		</ul>		
 	</div>
 <script src="animacion.js"></script>
